--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,27 @@ body {
   padding: 0;
   font: 13px Arial,Helvetica,sans-serif;
   background-color: #f6f5f3;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  user-select: none; 
+}
+
+body.night {
+  background-color: #000;
+  color: #fff;
+}
+
+body.night ::-webkit-scrollbar {
+  width: 12px;
+}
+
+body.night ::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #0e0e0e;
+}
+
+body.night ::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(202, 3, 3, 0.3); 
+  background-color: #532471; 
 }
